chore checkstyle with jacoco